tests/ui/higher-ranked/trait-bounds/normalize-under-binder/issue-89118.stderr
error[E0277]: the trait bound `for<'a> &'a (): BufferMut` is not satisfied
  --> $DIR/issue-89118.rs:19:8
   |
LL |     C: StackContext,
   |        ^^^^^^^^^^^^ the trait `for<'a> BufferMut` is not implemented for `&'a ()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/issue-89118.rs:1:1
   |
LL | trait BufferMut {}
   | ^^^^^^^^^^^^^^^
note: required for `Ctx<()>` to implement `for<'a> BufferUdpStateContext<&'a ()>`
  --> $DIR/issue-89118.rs:5:23
   |
LL | impl<B: BufferMut, C> BufferUdpStateContext<B> for C {}
   |         ---------     ^^^^^^^^^^^^^^^^^^^^^^^^     ^
   |         |
   |         unsatisfied trait bound introduced here
note: required by a bound in `StackContext`
  --> $DIR/issue-89118.rs:9:14
   |
LL | trait StackContext
   |       ------------ required by a bound in this trait
LL | where
LL |     Ctx<()>: for<'a> BufferUdpStateContext<&'a ()>,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `StackContext`

error[E0277]: the trait bound `for<'a> &'a (): BufferMut` is not satisfied
  --> $DIR/issue-89118.rs:29:9
   |
LL | impl<C> EthernetWorker<C> {}
   |         ^^^^^^^^^^^^^^^^^ the trait `for<'a> BufferMut` is not implemented for `&'a ()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/issue-89118.rs:1:1
   |
LL | trait BufferMut {}
   | ^^^^^^^^^^^^^^^
note: required for `Ctx<()>` to implement `for<'a> BufferUdpStateContext<&'a ()>`
  --> $DIR/issue-89118.rs:5:23
   |
LL | impl<B: BufferMut, C> BufferUdpStateContext<B> for C {}
   |         ---------     ^^^^^^^^^^^^^^^^^^^^^^^^     ^
   |         |
   |         unsatisfied trait bound introduced here
note: required by a bound in `EthernetWorker`
  --> $DIR/issue-89118.rs:28:14
   |
LL | struct EthernetWorker<C>(C)
   |        -------------- required by a bound in this struct
LL | where
LL |     Ctx<()>: for<'a> BufferUdpStateContext<&'a ()>;
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EthernetWorker`

error[E0277]: the trait bound `for<'a> &'a (): BufferMut` is not satisfied
  --> $DIR/issue-89118.rs:22:5
   |
LL |     type Handler = Ctx<C::Dispatcher>;
   |     ^^^^^^^^^^^^ the trait `for<'a> BufferMut` is not implemented for `&'a ()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/issue-89118.rs:1:1
   |
LL | trait BufferMut {}
   | ^^^^^^^^^^^^^^^
note: required for `Ctx<()>` to implement `for<'a> BufferUdpStateContext<&'a ()>`
  --> $DIR/issue-89118.rs:5:23
   |
LL | impl<B: BufferMut, C> BufferUdpStateContext<B> for C {}
   |         ---------     ^^^^^^^^^^^^^^^^^^^^^^^^     ^
   |         |
   |         unsatisfied trait bound introduced here
note: required by a bound in `StackContext`
  --> $DIR/issue-89118.rs:9:14
   |
LL | trait StackContext
   |       ------------ required by a bound in this trait
LL | where
LL |     Ctx<()>: for<'a> BufferUdpStateContext<&'a ()>,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `StackContext`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
